--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 
 * {
-  max-width: 700px;
-  margin: auto;
-}
+    font-family: Helvetica, Arial, sans-serif;
+    max-width: 700px;
+    margin: auto;
 
+  }
 
-/*body {
-    min-width: 500px;
-}*/
+body {
+      min-width: 500px;
+      background-color: #e0eeee;
+  }
 
 div {
   border-radius: 5px;
