--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
     font-family: Helvetica, Arial, sans-serif;
     max-width: 700px;
@@ -10,72 +9,21 @@ body {
       min-width: 500px;
       background-color: #e0eeee;
   }
-
 div {
   border-radius: 5px;
 }
 
-#header {
-  height: 40px;
-  width: 100%;
-  position: fixed;
-  z-index: 1;
-}
-
-#title {
-  margin-left: 3%;
-}
-
-
-
-.left {
-  height: 1000px;
-  width: 45px;
-
-  float: left;
-  position: fixed;
-}
-
-.stuff {
-  display: inline-block;
-  margin-top: 6px;
-  margin-left: 55px;
-  width: 75%;
-  height: 1000px;
-}
-
-p,
-li {
-  font-family: 'Cormorant Garamond';
-}
-
-.head {
-  font-size: 20px;
-}
-
-#name {
-  font-family: Sacramento;
-  float: right;
-  margin-top: 10px;
-  margin-right: 4%;
-}
-
-a {
-  color: black;
-  text-decoration: none;
-}
-
-@media only screen and (max-width: 430px) {
-  .left,
-  .right {
-    display: none;
+.profileBody {
+    display: inline-block;
+    background-color: white;
+    margin-top: 6px;
+    margin-left: 55px;
+    width: 75%;
+    height: 590px;
   }
-  .stuff {
-    width: 100%;
-    margin-left: 10px;
-  }
-}
-h2
+ul,p
 {
-	font-size: 20px;
+	font-size:15px;
 }
+
+
